Addtocart-removefromcart commit

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             >shopping_bag</span
           >
           <span class="action_name">Bag</span>
+          <span class="bag-items"></span>
         </a>
       </div>
     </header>
